# openapi.json
@@ -347,7 +347,9 @@
           "description",
           "url",
           "language",
-          "stars"
+          "stars",
+          "contributions",
+          "isOwned"
         ],
         "type": "object",
         "properties": {
@@ -370,6 +372,17 @@
               "string"
             ],
             "format": "int32"
+          },
+          "contributions": {
+            "pattern": "^-?(?:0|[1-9]\\d*)$",
+            "type": [
+              "integer",
+              "string"
+            ],
+            "format": "int32"
+          },
+          "isOwned": {
+            "type": "boolean"
           }
         }
       },
